# rusted-rover

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig.defaults
.devcontainer/: devcontainer.json
components/rust-rusted-rover/: CMakeLists.txt  Cargo.toml
components/rust-rusted-rover/.cargo/: config.toml
components/rust-rusted-rover/.embuild/espressif/: esp-idf-master  python_env  tools
components/rust-rusted-rover/src/: gamepad_serializer.model.rs  lib.rs  rover.rs
main/: main.c
